unpackaged/main/default/objects/Contact/fields/CI_demo__c.field-meta.xml
<CustomField>
    <fullName>CI_demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CI demo</label>
    <type>Checkbox</type>
</CustomField>