unpackaged/main/default/objects/Contact/fields/Demo_tickbox__c.field-meta.xml
<CustomField>
    <fullName>Demo_tickbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo tickbox</label>
    <type>Checkbox</type>
</CustomField>