unpackaged/main/default/objects/Contact/fields/Top_10_Customer__c.field-meta.xml
<CustomField>
    <fullName>Top_10_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top 10 Customer</label>
    <type>Checkbox</type>
</CustomField>